fix header, footer

--- a/static/src/sass/components/_footer.sass
+++ b/static/src/sass/components/_footer.sass
@@ -10,33 +10,33 @@
   grid-template-rows: 0.25fr 0.25fr 0.25fr 0.25fr
   grid-template-areas: "first-1 first-2" "second-1 second-2" "third-1 third-2" "forth-1 forth-2"
   font-size: 21px
-  p:nth-child(1)
+.footer__copyright
     grid-area: first-1
     padding: 1vh
     justify-self: start
     color: #FEFEFE
-  p:nth-child(2)
+.footer__address
     grid-area: second-1
     padding: 1vh
     justify-self: start
     color: #FEFEFE
     a
       color: #FEFEFE
-  p:nth-child(3)
+.footer__phone
     grid-area: third-1
     padding: 1vh
     justify-self: start
     color: #FEFEFE
-  a
+.footer__top
     grid-area: forth-1
     padding: 1vh
     justify-self: start
     color: #FEFEFE
-  img
+.footer__img
     grid-area: third-2
     padding: 1vh
     justify-self: end
-  p
+.footer__views
     grid-area: forth-2
     padding: 1vh
     justify-self: end
