--- a/static/src/sass/components/_header.sass
+++ b/static/src/sass/components/_header.sass
@@ -3,7 +3,7 @@
 
 @mixin header
 $font-color: #F8F8F2
-#headerSec
+.headerSec
   width: 100%
   height: 272px
   background-color: #262E3E
@@ -12,19 +12,19 @@ $font-color: #F8F8F2
   grid-template-rows: auto auto auto auto
   grid-template-columns: 4rem 50% auto
   overflow: hidden
-  #csieTitle
+.headerSec__csieTitle
     margin-left: 2rem
     justify-self: start
     display: grid
     grid-row: 1 / span 2
     grid-column: 1 / span 2
-    a
+.headerSec__csieTitle--web
       display: grid
       grid-row: 1 / span 2
       grid-column: 1 / span 2
       justify-self: start
       text-align: left
-    img
+.headerSec__csieTitle--img
       display: grid
       grid-row: 1 / span 2
       grid-column: 1
@@ -36,7 +36,7 @@ $font-color: #F8F8F2
       margin-right: .5rem
       background: $font-color
       border-radius: 50%
-  h1
+.headerSec__Chinese
     grid-row: 1
     grid-column: 2
     font-size: 1.7rem
@@ -44,13 +44,13 @@ $font-color: #F8F8F2
     color: $font-color
     justify-self: start
     align-self: end
-  h2
+.headerSec__English
     grid-row: 2
     grid-column: 2
     font-size: 1.3rem
     color: $font-color
     justify-self: start
-  .drop
+.headerSec__drop
     grid-row: row 4
     grid-column: 1 / span 3
     width: 100%
@@ -66,7 +66,7 @@ $font-color: #F8F8F2
       height: 100%
       &:hover
         background-color: #008891
-  input
+.headerSec__input
     grid-row: 1
     grid-column: 3
     width: 40%
@@ -96,7 +96,7 @@ $font-color: #F8F8F2
     color: $font-color
     text-align: center
     text-decoration: none
-#navBarUl
+.navBarUl
   grid-row: row 3
   grid-column: 1 / span 3
   overflow: hidden
@@ -104,5 +104,3 @@ $font-color: #F8F8F2
   padding: 0rem
   justify-self: end
   align-self: stretch
-
-
