--- a/static/src/sass/components/common/_footer.scss
+++ b/static/src/sass/components/common/_footer.scss
@@ -1,32 +1,39 @@
 @import './reset';
+
+$pc-media: 960px;
+$phone-media: 480px;
+@mixin pc () {
+  @media all and (min-width: $pc-media) {
+    @content;
+  }
+}
+@mixin phone () {
+  @media all and (max-width: $phone-media) {
+    @content;
+  }
+}
 @mixin footer{
 
   .footer{
-    //phone
-    @media all and (max-width:480px) {
-      width: 375px;
-      height: 138.83px;
-      padding: 5vh 7vw;
-      font-size: 10px;
-      display: grid;
-      background-color: #262e3e;
-      grid-template-columns: .5fr .5fr;
-      grid-template-rows: .25fr .25fr .25fr .25fr;
-      grid-template-areas: 'first-1 first-2' 'second-1 second-2' 'third-1 third-2' 'forth-1 forth-2';
-    }
-
-    //computer
-    @media all and (min-width:960px) {
+    @include pc{
       width: 1920px;
       height: 340px;
       padding: 5vh 7vw;
       font-size: 21px;
-      display: grid;
-      background-color: #262e3e;
       grid-template-columns: .5fr .5fr;
       grid-template-rows: .25fr .25fr .25fr .25fr;
-      grid-template-areas: 'first-1 first-2' 'second-1 second-2' 'third-1 third-2' 'forth-1 forth-2';
     }
+    @include phone{
+      width: 375px;
+      height: 138.83px;
+      padding: 5vh 7vw;
+      font-size: 10px;
+      grid-template-columns: .75fr .25fr;
+      grid-template-rows: .25fr .25fr .25fr .25fr;
+    }
+    display: grid;
+    background-color: #262e3e;
+    grid-template-areas: 'first-1 first-2' 'second-1 second-2' 'third-1 third-2' 'forth-1 forth-2';
   }
 
   .footer__copyright{
@@ -41,9 +48,12 @@
     padding: 1vh;
     justify-self: start;
     color: #fefefe;
-
+    
     a{
-      color: #fefefe;
+      color: #fefefe ;
+      @include phone{
+        font-size: 10px;
+      }
     }
   }
 
@@ -59,6 +69,9 @@
     padding: 1vh;
     justify-self: start;
     color: #fefefe;
+    @include phone{
+      font-size: 10px;
+    }
   }
 
   .footer__img{
