--- a/static/src/pug/components/common/header.pug
+++ b/static/src/pug/components/common/header.pug
@@ -2,54 +2,54 @@ mixin header()
   header.headerSec
     include /components/common/nav.pug
     script(src=`/js/components/header.js`)
-    div.headerSec__csieTitle
-      a.header__csieTitle--web(href='/')
-        img.header__csieTitle--img
-        h1.header__Chinese 成功大學資訊工程學系暨研究所
-        h2.header__English Department of Computer Science and Information Engineering
+    a.headerSec__csieTitle(href='/')
+      img.headerSec__csieTitle--img
+      p.headerSec__csietitle--Chinese 成功大學資訊工程學系暨研究所
+      p.headerSec__csietitle--English Department of Computer Science and Information Engineering
     input.headerSec__input(placeHolder='search')
-    a(href='/') English
+    a.user(href='/') ssss sus English
 
-    ul.navbar
-      li
-        a(href='') 首頁
-        a(href='') 關於本系
-          ul.headerSec__drop
-            li
-              a(href='/about/intro') 系所介紹
-              a(href='/about/teachers') 師資陣容
-              a(href='/about/members') 系辦成員
-              a(href='/about/honor') 榮譽事蹟
-              a(href='/about/location') 聯絡我們             
-        a(href='') 學術研究
-          ul.headerSec__drop
-            li
-              a(href='/research/labs') 實驗室
-              a(href='/research/groups') 研究群
-              a(href='/research/publications') Publications
-              a(href='/research/awards') Awards
-              a(href='/research/conferences') 研討會 
-        a(href='') 學生事務
+    ul.dropdown
+      li.dropdown__navbar
+        a.dropdown__btn(href='') 首頁
           ul.dropdown__content
-            li
-              a(href='/research/labs') 實驗室
-              a(href='/research/groups') 研究群
-              a(href='/research/publications') Publications
-              a(href='/research/awards') Awards
-              a(href='/research/conferences') 研討會
-        a(href='') 系所公告
-          ul.headerSec__drop
-            li
-              a(href='/announcement/all') 全部公告
-              a(href='/announcement/administrator') 行政公告
-              a(href='/announcement/activity') 活動訊息
-              a(href='/announcement/speech') 演講公告
-              a(href='/announcement/recruitment') 企業徵才
-        a(href='') 資源連結
-          ul.headerSec__drop
-            li
-              a(href='/resource/law') 法規彙編
-              a(href='/resource/rent') 線上租借
-              a(href='/resource/fix') 修繕登記
-              a(href='/resource/ieet') 工程認證
-              a(href='/resource/resources') 線上資源
+      li.dropdown__navbar
+        a.dropdown__btn(href='') 關於本系
+          ul.dropdown__content
+            a(href='/about/intro') 系所介紹
+            a(href='/about/teachers') 師資陣容
+            a(href='/about/members') 系辦成員
+            a(href='/about/honor') 榮譽事蹟
+            a(href='/about/location') 聯絡我們
+      li.dropdown__navbar
+        a.dropdown__btn(href='') 學術研究
+          ul.dropdown__content
+            a(href='/research/labs') 實驗室
+            a(href='/research/groups') 研究群
+            a(href='/research/publications') Publications
+            a(href='/research/awards') Awards
+            a(href='/research/conferences') 研討會
+      li.dropdown__navbar
+        a.dropdown__btn(href='') 學生事務
+          ul.dropdown__content
+            a(href='/research/labs') 實驗室
+            a(href='/research/groups') 研究群
+            a(href='/research/publications') Publications
+            a(href='/research/awards') Awards
+            a(href='/research/conferences') 研討會
+      li.dropdown__navbar
+        a.dropdown__btn(href='') 系所公告
+          ul.dropdown__content
+            a(href='/announcement/all') 全部公告
+            a(href='/announcement/administrator') 行政公告
+            a(href='/announcement/activity') 活動訊息
+            a(href='/announcement/speech') 演講公告
+            a(href='/announcement/recruitment') 企業徵才
+      li.dropdown__navbar
+        a.dropdown__btn(href='') 資源連結
+          ul.dropdown__content
+            a(href='/resource/law') 法規彙編
+            a(href='/resource/rent') 線上租借
+            a(href='/resource/fix') 修繕登記
+            a(href='/resource/ieet') 工程認證
+            a(href='/resource/resources') 線上資源
