--- a/static/src/sass/components/common/_header.scss
+++ b/static/src/sass/components/common/_header.scss
@@ -19,55 +19,85 @@ $phone-media: 480px;
   .headerSec{
     @include pc{
       width: 1920px;
-      height: 300px;
+      height: 272px;
+      display: grid;
+      grid-template-rows: .33fr .33fr .17f .17fr;
+      grid-template-columns: 4rem 50% auto;
     }
     @include phone{
       width: 375px;
-      height: 20px;
+      height: 78px;
+      display: grid;
+      grid-template-rows: .5fr .5fr;
+      grid-template-columns: .7fr .15fr .15fr;
     }
     background-color: #262e3e;
     padding: 0;
-    display: grid;
-    grid-template-rows: .33fr .33fr .34fr;
-    grid-template-columns: 4rem 50% auto;
   }
 
     
 
   .headerSec__csieTitle{
-    margin-left: 2rem;
     justify-self: start;
-    display: grid;
-    grid-row: 1 ;
-    grid-column: 1 / span 2;
+    @include pc{
+      margin-left: 2rem;
+      display: grid;
+      grid-row: 1 ;
+      grid-column: 1 / span 2;
+    }
+    @include phone{
+      margin-left: 0.5rem;
+      display: grid;
+      grid-row: 1 / span 2 ;
+      grid-column: 1 ;
+    }
   }
 
   .headerSec__csieTitle--web{
-    display: grid;
-    grid-row: 1 / span 2;
-    grid-column: 1 / span 2;
+    @include pc{
+      display: grid;
+      grid-row: 1 / span 2;
+      grid-column: 1 / span 2;
+    }
+    @include phone{
+      display: grid;
+      grid-row: 1 / span 2;
+      grid-column: 1;
+    }
     justify-self: start;
     text-align: left;
   }
 
   .headerSec__csieTitle--img{
-    display: grid;
-    grid-row: 1 / span 2;
-    grid-column: 1;
-    align-self: center;
-    justify-self: start;
-    width: 3.5rem;
-    height: auto;
-    padding-top: 3.5rem;
-    margin-right: .5rem;
-    background: $font-color ;
-    border-radius: 50%;
+    @include pc{
+      display: grid;
+      grid-row: 1 / span 2;
+      grid-column: 1;
+      align-self: center;
+      justify-self: start;
+      width: 3.5rem;
+      height: auto;
+      padding-top: 3.5rem;
+      margin-right: .5rem;
+      background: $font-color ;
+      border-radius: 50%;
+    }
+    @include phone{
+      display: none;
+    }
   }
 
   .headerSec__csietitle--Chinese{
-    grid-row: 1;
-    grid-column: 2;
-    font-size: 1rem;
+    @include pc{
+      grid-row: 1;
+      grid-column: 2;
+      font-size: 1rem;
+    }
+    @include phone{
+      grid-row: 1;
+      grid-column: 1;
+      font-size: 18px;
+    }
     font-weight: normal;
     color: $font-color ;
     justify-self: start;
@@ -75,101 +105,132 @@ $phone-media: 480px;
   }
 
   .headerSec__csietitle--English{
-    grid-row: 2;
-    grid-column: 2;
-    font-size: .7rem;
+    @include pc{
+      grid-row: 2;
+      grid-column: 2;
+      font-size: .7rem;
+    }
+    @include phone{
+      grid-row: 2;
+      grid-column: 1;
+      font-size: 9px;
+    }
     color: $font-color ;
     justify-self: start;
   }
 
   .headerSec__input{
-    grid-row: 1;
-    grid-column: 3;
-    width: 30%;
-    height: .5rem;
-    background-color: rgba(0, 0, 0, 0);
-    margin-right: 3rem;
-    margin-top: .5rem;
-    border: .08rem solid #f8f8f2;
-    border-radius: .5rem;
-    padding: .7rem;
-    color: #f8f8f2;
-    font-size: .4rem;
-    outline: none;
-    justify-self: stretch;
-
-    &::placeholder{
+    @include pc{
+      display: block;
+      grid-row: 1;
+      grid-column: 3;
+      width: 30%;
+      height: .5rem;
+      background-color: rgba(0, 0, 0, 0);
+      margin-right: 3rem;
+      margin-top: .5rem;
+      border: .08rem solid #f8f8f2;
+      border-radius: .5rem;
+      padding: .7rem;
       color: #f8f8f2;
-      font-size: 1rem;
-    }
+      font-size: .4rem;
+      outline: none;
+      justify-self: stretch;
 
-    &+a{
-      justify-self: end;
-      align-self: flex-end;
-      text-align: right;
-      font-size: 1.3rem;
-      margin-right: 3.5rem;
-      margin-top: 1rem;
+      &::placeholder{
+        color: #f8f8f2;
+        font-size: 1rem;
+      }
+
+      &+a{
+        justify-self: end;
+        align-self: flex-end;
+        text-align: right;
+        font-size: 1.3rem;
+        margin-right: 3.5rem;
+        margin-top: 1rem;
+      }
+    }
+    @include phone{
+      display: none;
     }
   }
 
   .user{
-    font-size: 10px;
-    color: $font-color ;
-    grid-row: 2;
-    grid-column: 3;
+    @include pc{
+      display: block;
+      font-size: 10px;
+      color: $font-color ;
+      grid-row: 2;
+      grid-column: 3;
+    }
+    @include phone{
+      display: none;
+      grid-row: 1;
+      grid-column: 3;
+    }
   }
 
   .dropdown{
-    grid-row: 3;
-    grid-column: 2 / span 3;
-    overflow: hidden;
-    margin: 0;
-    padding-bottom: 2rem;
-    justify-self: end;
-    align-self: stretch;
-  }
-
-  .dropdown__navbar{
-    display: inline-block;
-    color: #f8f8f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-
-    &:hover{
-      background-color: #00c3d0 ;      
+    @include pc{
+      grid-row: 3;
+      grid-column: 2 / span 3;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0);
+    }
+    @include phone{
+      display: none;
     }
   }
 
-  .dropdown__btn{
-    display: inline-block;
+  li{
+    float: right;
+  }
 
-    &:hover{
-      background-color: #00c3d0 ;
-      display: block;
-    }
+  li a, .dropdown__btn {
+      display: inline-block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+  }
+  li a:hover, .dropdown__navbar:hover .dropdown__btn{
+    background-color: #02c874 ;
+  }
+
+  li.dropdown__navbar{
+    display: inline-block;
   }
 
   .dropdown__content{
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
-    z-index: 1;
+    @include pc{
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
+      z-index: 1;
 
-    a{
-      color: #262e3e;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-
-      &:hover{
-        background-color: #008891 ;
+      a{
+        color: #262e3e;
+        padding: 12px 16px;
+        text-decoration: none;
         display: block;
+        text-align: left;
+
+        &:hover{
+          background-color: #02c874 ;
+        }
       }
+  @include phone{
+    display: none;
+  }
     }
+  }
+  .dropdown__navbar:hover .dropdown__content {
+    display: block;
   }
 }
