--- a/static/src/sass/components/common/_header.scss
+++ b/static/src/sass/components/common/_header.scss
@@ -46,7 +46,7 @@ $phone-media: 480px;
       grid-column: 1 / span 2;
     }
     @include phone{
-      margin-left: 0.5rem;
+      margin-left: .5rem;
       display: grid;
       grid-row: 1 / span 2 ;
       grid-column: 1 ;
@@ -176,9 +176,9 @@ $phone-media: 480px;
       grid-row: 3;
       grid-column: 2 / span 3;
       list-style-type: none;
+      overflow: hidden;
       margin: 0;
       padding: 0;
-      overflow: hidden;
       background-color: rgba(0, 0, 0, 0);
     }
     @include phone{
@@ -186,31 +186,37 @@ $phone-media: 480px;
     }
   }
 
-  li{
-    float: right;
+  li a, .dropdown__btn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    z-index: 2;
   }
 
-  li a, .dropdown__btn {
-      display: inline-block;
-      color: white;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-  }
   li a:hover, .dropdown__navbar:hover .dropdown__btn{
-    background-color: #02c874 ;
+    background-color: #155f64;
+  }
+
+  li{
+    float: right;
   }
 
   li.dropdown__navbar{
     display: inline-block;
   }
 
+
   .dropdown__content{
     @include pc{
       display: none;
+      width: 1920px;
+      height:52px;
+      background-color: #00c3d0;
+      white-space: nowrap;
       position: absolute;
-      background-color: #f9f9f9;
-      min-width: 160px;
+      right: 0;
       box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
       z-index: 1;
 
@@ -218,18 +224,19 @@ $phone-media: 480px;
         color: #262e3e;
         padding: 12px 16px;
         text-decoration: none;
-        display: block;
-        text-align: left;
+        display: inline;
+        float:right;
 
         &:hover{
-          background-color: #02c874 ;
+          background-color: #155f64;
         }
       }
-  @include phone{
-    display: none;
-  }
+      @include phone{
+        display: none;
+      }
     }
   }
+
   .dropdown__navbar:hover .dropdown__content {
     display: block;
   }
