some conflict solve

--- a/static/src/pug/components/common/nav.pug
+++ b/static/src/pug/components/common/nav.pug
@@ -1,7 +1,3 @@
 mixin nav(btn_id, content, drop_id)
   li.navOptionLi
-    button(id=btn_id onClick=`navOptionOnClick(${ btn_id }, ${ drop_id })`)= content
-
-
-
-
+    button(id=btn_id, onClick='navOptionOnClick(${ btn_id }, ${ drop_id })')= content
