--- a/static/src/sass/home/index.scss
+++ b/static/src/sass/home/index.scss
@@ -2,7 +2,7 @@
 @import '../components/common/header';
 @import '../components/common/footer';
 
-body{
-  @include header;
-  @include footer;
+body {
+  @include header();
+  @include footer();
 }
