--- a/static/src/pug/components/announcement/announcement.pug
+++ b/static/src/pug/components/announcement/announcement.pug
@@ -1,6 +1,6 @@
 mixin announce(title,time,excerpt,tagnum,url)
-  div#post
-    p=title
-    p=excerpt
-    p=time
-    div#tag
+  p.post
+    p= title
+    p= excerpt
+    p= time
+    p.tag
