--- a/static/src/pug/components/common/header.pug
+++ b/static/src/pug/components/common/header.pug
@@ -6,7 +6,8 @@ mixin header()
       img.headerSec__csieTitle--img
       p.headerSec__csietitle--Chinese 成功大學資訊工程學系暨研究所
       p.headerSec__csietitle--English Department of Computer Science and Information Engineering
-    input.headerSec__input(placeHolder='search')
+    input.headerSec__input
+      (placeHolder='search')
     a.user(href='/') ssss sus English
 
     ul.dropdown
