--- a/static/src/sass/components/common/_header.scss
+++ b/static/src/sass/components/common/_header.scss
@@ -4,75 +4,91 @@
 $pc-media: 960px;
 $phone-media: 480px;
 @mixin pc () {
-  @media all and (min-width: $pc-media) {
+  @media all and ( min-width: $pc-media ) {
     @content;
   }
 }
 @mixin phone () {
-  @media all and (max-width: $phone-media) {
+  @media all and ( max-width: $phone-media ) {
     @content;
   }
 }
-@mixin header{
+@mixin header {
   $font-color: #f8f8f2;
 
-  .headerSec{
-    @include pc{
+  .headerSec {
+    @include pc() {
       width: 1920px;
       height: 272px;
       display: grid;
-      grid-template-rows: .33fr .33fr .17f .17fr;
-      grid-template-columns: 4rem 50% auto;
+      grid-template {
+        rows: .33fr .33fr .17fr .17fr;
+        columns: 4rem 50% auto;
+      }
     }
-    @include phone{
+    @include phone() {
       width: 375px;
       height: 78px;
       display: grid;
-      grid-template-rows: .5fr .5fr;
-      grid-template-columns: .7fr .15fr .15fr;
+      grid-template {
+        rows: .5fr .5fr;
+        columns: .7fr .15fr .15fr;
+      }
     }
     background-color: #262e3e;
     padding: 0;
   }
 
-    
-
   .headerSec__csieTitle{
     justify-self: start;
-    @include pc{
+    @include pc() {
       margin-left: 2rem;
       display: grid;
-      grid-row: 1 ;
-      grid-column: 1 / span 2;
+      grid {
+        row: 1 ;
+        column: 1 / span 2;
+      }
     }
-    @include phone{
+    @include phone() {
       margin-left: .5rem;
       display: grid;
-      grid-row: 1 / span 2 ;
-      grid-column: 1 ;
+      grid {
+        row: 1 / span 2 ;
+        column: 1 ;
+      }
     }
   }
 
   .headerSec__csieTitle--web{
-    @include pc{
+    @include phone() {
       display: grid;
-      grid-row: 1 / span 2;
-      grid-column: 1 / span 2;
+      grid {
+        row: 1 / span 2;
+        column: 1;
+      }
     }
-    @include phone{
+    @include pc() {
       display: grid;
-      grid-row: 1 / span 2;
-      grid-column: 1;
+      grid {
+        row: 1 / span 2;
+        column: 1 / span 2;
+      }
     }
     justify-self: start;
     text-align: left;
   }
 
   .headerSec__csieTitle--img{
-    @include pc{
+    @include phone() {
+      display: none;
+      border: 100px solid red;
+    }
+    @include pc() {
       display: grid;
-      grid-row: 1 / span 2;
-      grid-column: 1;
+      grid {
+        row: 1 / span 2;
+        column: 1;
+      }
       align-self: center;
       justify-self: start;
       width: 3.5rem;
@@ -82,20 +98,21 @@ $phone-media: 480px;
       background: $font-color ;
       border-radius: 50%;
     }
-    @include phone{
-      display: none;
-    }
   }
 
   .headerSec__csietitle--Chinese{
-    @include pc{
-      grid-row: 1;
-      grid-column: 2;
+    @include pc() {
+      grid {
+        row: 1;
+        column: 2;
+      }
       font-size: 1rem;
     }
-    @include phone{
-      grid-row: 1;
-      grid-column: 1;
+    @include phone() {
+      grid {
+        row: 1;
+        column: 1;
+      }
       font-size: 18px;
     }
     font-weight: normal;
@@ -105,14 +122,18 @@ $phone-media: 480px;
   }
 
   .headerSec__csietitle--English{
-    @include pc{
-      grid-row: 2;
-      grid-column: 2;
+    @include pc() {
+      grid {
+        row: 2;
+        column: 2;
+      }
       font-size: .7rem;
     }
-    @include phone{
-      grid-row: 2;
-      grid-column: 1;
+    @include phone() {
+      grid {
+        row: 2;
+        column: 1;
+      }
       font-size: 9px;
     }
     color: $font-color ;
@@ -120,10 +141,12 @@ $phone-media: 480px;
   }
 
   .headerSec__input{
-    @include pc{
+    @include pc() {
       display: block;
-      grid-row: 1;
-      grid-column: 3;
+      grid {
+        row: 1;
+        column: 3;
+      }
       width: 30%;
       height: .5rem;
       background-color: rgba(0, 0, 0, 0);
@@ -151,41 +174,44 @@ $phone-media: 480px;
         margin-top: 1rem;
       }
     }
-    @include phone{
+    @include phone() {
       display: none;
     }
   }
 
   .user{
-    @include pc{
+    @include pc() {
       display: block;
       font-size: 10px;
       color: $font-color ;
       grid-row: 2;
       grid-column: 3;
     }
-    @include phone{
+    @include phone() {
       display: none;
-      grid-row: 1;
-      grid-column: 3;
+      grid {
+        row: 1;
+        column: 3;
+      }
     }
   }
 
   .dropdown{
-    @include pc{
-      grid-row: 3;
-      grid-column: 2 / span 3;
+    @include pc() {
+      grid {
+        row: 3;
+        column: 2 / span 3;
+      }
       list-style-type: none;
       overflow: hidden;
       margin: 0;
       padding: 0;
       background-color: rgba(0, 0, 0, 0);
     }
-    @include phone{
+    @include phone() {
       display: none;
     }
   }
-
   li a, .dropdown__btn {
     display: inline-block;
     color: white;
@@ -194,11 +220,9 @@ $phone-media: 480px;
     text-decoration: none;
     z-index: 2;
   }
-
   li a:hover, .dropdown__navbar:hover .dropdown__btn{
     background-color: #155f64;
   }
-
   li{
     float: right;
   }
@@ -207,12 +231,11 @@ $phone-media: 480px;
     display: inline-block;
   }
 
-
   .dropdown__content{
-    @include pc{
+    @include pc() {
       display: none;
       width: 1920px;
-      height:52px;
+      height: 52px;
       background-color: #00c3d0;
       white-space: nowrap;
       position: absolute;
@@ -225,13 +248,13 @@ $phone-media: 480px;
         padding: 12px 16px;
         text-decoration: none;
         display: inline;
-        float:right;
+        float: right;
 
         &:hover{
           background-color: #155f64;
         }
       }
-      @include phone{
+      @include phone() {
         display: none;
       }
     }
