--- a/static/src/sass/components/common/_header.scss
+++ b/static/src/sass/components/common/_header.scss
@@ -20,21 +20,21 @@ $phone-media: 480px;
     @include pc() {
       width: 1920px;
       height: 272px;
-      display: grid;
       grid-template {
-        rows: .33fr .33fr .17fr .17fr;
+        rows: .25fr .25fr .25fr .25fr;
         columns: 4rem 50% auto;
       }
     }
     @include phone() {
       width: 375px;
       height: 78px;
-      display: grid;
       grid-template {
         rows: .5fr .5fr;
         columns: .7fr .15fr .15fr;
       }
     }
+    display: grid;
+    grid-template-areas:'. . search' 'img title-1 user' '. title-2 user' '. navbar navbar';
     background-color: #262e3e;
     padding: 0;
   }
@@ -44,38 +44,14 @@ $phone-media: 480px;
     @include pc() {
       margin-left: 2rem;
       display: grid;
-      grid {
-        row: 1 ;
-        column: 1 / span 2;
-      }
+      grid-area: title-1;
     }
     @include phone() {
       margin-left: .5rem;
       display: grid;
-      grid {
-        row: 1 / span 2 ;
-        column: 1 ;
-      }
+      grid-row: 1 / span 2 ;
+      grid-column: 1 ;
     }
-  }
-
-  .headerSec__csieTitle--web{
-    @include phone() {
-      display: grid;
-      grid {
-        row: 1 / span 2;
-        column: 1;
-      }
-    }
-    @include pc() {
-      display: grid;
-      grid {
-        row: 1 / span 2;
-        column: 1 / span 2;
-      }
-    }
-    justify-self: start;
-    text-align: left;
   }
 
   .headerSec__csieTitle--img{
@@ -85,14 +61,11 @@ $phone-media: 480px;
     }
     @include pc() {
       display: grid;
-      grid {
-        row: 1 / span 2;
-        column: 1;
-      }
+      grid-area: img ;
       align-self: center;
       justify-self: start;
-      width: 3.5rem;
-      height: auto;
+      width: 80px;
+      height: 72px;
       padding-top: 3.5rem;
       margin-right: .5rem;
       background: $font-color ;
@@ -102,17 +75,12 @@ $phone-media: 480px;
 
   .headerSec__csietitle--Chinese{
     @include pc() {
-      grid {
-        row: 1;
-        column: 2;
-      }
+      grid-area: title-1;
       font-size: 1rem;
     }
     @include phone() {
-      grid {
-        row: 1;
-        column: 1;
-      }
+      grid-row: 1;
+      grid-column: 1;
       font-size: 18px;
     }
     font-weight: normal;
@@ -123,17 +91,12 @@ $phone-media: 480px;
 
   .headerSec__csietitle--English{
     @include pc() {
-      grid {
-        row: 2;
-        column: 2;
-      }
+      grid-area: title-2;
       font-size: .7rem;
     }
     @include phone() {
-      grid {
-        row: 2;
-        column: 1;
-      }
+      grid-row: 2;
+      grid-column: 1;
       font-size: 9px;
     }
     color: $font-color ;
@@ -143,18 +106,15 @@ $phone-media: 480px;
   .headerSec__input{
     @include pc() {
       display: block;
-      grid {
-        row: 1;
-        column: 3;
-      }
-      width: 30%;
-      height: .5rem;
+      grid-area: search;
+      width: 406px;
+      height: 48px;
       background-color: rgba(0, 0, 0, 0);
       margin-right: 3rem;
       margin-top: .5rem;
-      border: .08rem solid #f8f8f2;
+      border: .5px solid #f8f8f2;
       border-radius: .5rem;
-      padding: .7rem;
+      padding: 5px;
       color: #f8f8f2;
       font-size: .4rem;
       outline: none;
@@ -162,7 +122,8 @@ $phone-media: 480px;
 
       &::placeholder{
         color: #f8f8f2;
-        font-size: 1rem;
+        font-size: 21px;
+        font-family: Arial, Regular;
       }
 
       &+a{
@@ -184,8 +145,7 @@ $phone-media: 480px;
       display: block;
       font-size: 10px;
       color: $font-color ;
-      grid-row: 2;
-      grid-column: 3;
+      grid-area: user;
     }
     @include phone() {
       display: none;
@@ -198,10 +158,7 @@ $phone-media: 480px;
 
   .dropdown{
     @include pc() {
-      grid {
-        row: 3;
-        column: 2 / span 3;
-      }
+      grid-area: navbar;
       list-style-type: none;
       overflow: hidden;
       margin: 0;
@@ -211,18 +168,25 @@ $phone-media: 480px;
     @include phone() {
       display: none;
     }
+    font-size: 24px;
   }
+
   li a, .dropdown__btn {
+    width: 154px;
+    height: 43px;
     display: inline-block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 16px 0 0;
     text-decoration: none;
     z-index: 2;
   }
+
   li a:hover, .dropdown__navbar:hover .dropdown__btn{
-    background-color: #155f64;
+    border-bottom: 5px;
+    border-color: #00c3d0 ;
   }
+
   li{
     float: right;
   }
@@ -244,14 +208,16 @@ $phone-media: 480px;
       z-index: 1;
 
       a{
-        color: #262e3e;
-        padding: 12px 16px;
+        color: white;
+        padding: 9px 20px;
         text-decoration: none;
         display: inline;
         float: right;
+        text-align: center;
+        font-family: Arial, Regular;
 
         &:hover{
-          background-color: #155f64;
+          background: #008891 ;
         }
       }
       @include phone() {
