--- a/static/src/pug/home/index.pug
+++ b/static/src/pug/home/index.pug
@@ -6,5 +6,5 @@ html
   body
     include /components/common/header.pug
     +header
-    include /components/common/footer.pug
-    +footer
+    //-include /components/common/footer.pug
+    //-+footer
