--- a/static/src/pug/components/common/header.pug
+++ b/static/src/pug/components/common/header.pug
@@ -1,19 +1,18 @@
 mixin header()
-  header.headerSec
-    include /components/common/nav.pug
-    script(src=`/js/components/header.js`)
-    a.headerSec__csieTitle(href='/')
-      img.headerSec__csieTitle--img
-      p.headerSec__csietitle--Chinese 成功大學資訊工程學系暨研究所
-      p.headerSec__csietitle--English Department of Computer Science and Information Engineering
-    input.headerSec__input( placeHolder='search' )
-    a.user(href='/') ssss sus English
+  header.header
+    img.header__img
+    p.header__ChineseTitle
+      a(href='/') 成功大學資訊工程學系暨研究所
+    p.header__EnglishTitle
+      a(href='/')  Department of Computer Science and Information Engineering
+    input.header__input( placeHolder='search' )
+    a.header__user(href='/') ssss sus English
 
     ul.dropdown
       li.dropdown__navbar
-        a.dropdown__btn(href='') 首頁
+        a.dropdown__btn(href='/') 首頁
       li.dropdown__navbar
-        a.dropdown__btn(href='') 關於本系
+        a.dropdown__btn(href='/') 關於本系
           ul.dropdown__content
             a(href='/about/intro') 系所介紹
             a(href='/about/teachers') 師資陣容
@@ -21,7 +20,7 @@ mixin header()
             a(href='/about/honor') 榮譽事蹟
             a(href='/about/location') 聯絡我們
       li.dropdown__navbar
-        a.dropdown__btn(href='') 學術研究
+        a.dropdown__btn(href='/') 學術研究
           ul.dropdown__content
             a(href='/research/labs') 實驗室
             a(href='/research/groups') 研究群
@@ -29,7 +28,7 @@ mixin header()
             a(href='/research/awards') Awards
             a(href='/research/conferences') 研討會
       li.dropdown__navbar
-        a.dropdown__btn(href='') 學生事務
+        a.dropdown__btn(href='/') 學生事務
           ul.dropdown__content
             a(href='/research/labs') 實驗室
             a(href='/research/groups') 研究群
@@ -37,7 +36,7 @@ mixin header()
             a(href='/research/awards') Awards
             a(href='/research/conferences') 研討會
       li.dropdown__navbar
-        a.dropdown__btn(href='') 系所公告
+        a.dropdown__btn(href='/') 系所公告
           ul.dropdown__content
             a(href='/announcement/all') 全部公告
             a(href='/announcement/administrator') 行政公告
@@ -45,7 +44,7 @@ mixin header()
             a(href='/announcement/speech') 演講公告
             a(href='/announcement/recruitment') 企業徵才
       li.dropdown__navbar
-        a.dropdown__btn(href='') 資源連結
+        a.dropdown__btn(href='/') 資源連結
           ul.dropdown__content
             a(href='/resource/law') 法規彙編
             a(href='/resource/rent') 線上租借
