--- a/static/src/sass/components/common/_footer.scss
+++ b/static/src/sass/components/common/_footer.scss
@@ -16,8 +16,8 @@ $phone-media: 480px;
 
   .footer {
     @include pc() {
-      width: 1920px;
-      height: 340px;
+      width: 100%;
+      height: 30%;
       padding: 5vh 7vw;
       font-size: 25px;
       grid-template: {
