--- a/static/src/sass/components/common/_header.scss
+++ b/static/src/sass/components/common/_header.scss
@@ -1,5 +1,5 @@
-@import './reset';
-@import './nav';
+@import 'components/common/reset';
+@import 'components/common/nav';
 
 $pc-media: 960px;
 $phone-media: 480px;
@@ -13,99 +13,92 @@ $phone-media: 480px;
     @content;
   }
 }
-@mixin header {
-  $font-color: #f8f8f2;
-
-  .headerSec {
-    @include pc() {
-      width: 1920px;
-      height: 272px;
-      grid-template {
-        rows: .25fr .25fr .25fr .25fr;
-        columns: 4rem 50% auto;
-      }
+@mixin header () {
+  .header {
+    $font-color: #f8f8f2;
+    grid-template: {
+      rows: .25fr .25fr .25fr .25fr ;
+      columns: .03fr .5fr .5fr;
+      areas: 
+      '. . search'
+      'img title1 user'
+      'img title2 user'
+      '. navbar navbar';
     }
-    @include phone() {
+    display: grid;
+    
+    background-color: #262e3e;
+    padding: 0;
+    /*@include pc() {*/
+      width: 100%;
+      height: 25%;
+      /*grid-template {
+        rows: .25fr .25fr .25fr .25fr ;
+        columns: .2fr .5fr .5fr;
+      }
+    }*/
+    /*@include phone() {
       width: 375px;
       height: 78px;
       grid-template {
         rows: .5fr .5fr;
         columns: .7fr .15fr .15fr;
       }
-    }
-    display: grid;
-    grid-template-areas:'. . search' 'img title-1 user' '. title-2 user' '. navbar navbar';
-    background-color: #262e3e;
-    padding: 0;
-  }
+    }*/
 
-  .headerSec__csieTitle{
-    justify-self: start;
-    @include pc() {
-      margin-left: 2rem;
-      display: grid;
-      grid-area: title-1;
-    }
-    @include phone() {
-      margin-left: .5rem;
-      display: grid;
-      grid-row: 1 / span 2 ;
-      grid-column: 1 ;
-    }
-  }
-
-  .headerSec__csieTitle--img{
-    @include phone() {
-      display: none;
-      border: 100px solid red;
-    }
-    @include pc() {
-      display: grid;
-      grid-area: img ;
-      align-self: center;
-      justify-self: start;
+    &__img {
+      /* @include phone() {
+         display: none;
+         border: 100px solid red;
+       }*/
+       /*@include pc() {*/
+      //display: grid;
+      grid-area: img;
+      //align-self: center;
+      //justify-self: start;
       width: 80px;
       height: 72px;
       padding-top: 3.5rem;
-      margin-right: .5rem;
+      margin-right: 10px;
+      margin-left: 30px;
       background: $font-color ;
       border-radius: 50%;
+       //}
     }
-  }
-
-  .headerSec__csietitle--Chinese{
-    @include pc() {
-      grid-area: title-1;
+   
+    &__ChineseTitle {
+        //@include pc() {
+      grid-area: title1;
       font-size: 1rem;
+        //}
+        /*@include phone() {
+          grid-row: 1;
+          grid-column: 1;
+          font-size: 18px;
+        }*/
+      font-weight: normal;
+      color: $font-color ;
+      //justify-self: start;
+      //align-self: end;
     }
-    @include phone() {
-      grid-row: 1;
-      grid-column: 1;
-      font-size: 18px;
-    }
-    font-weight: normal;
-    color: $font-color ;
-    justify-self: start;
-    align-self: end;
-  }
-
-  .headerSec__csietitle--English{
-    @include pc() {
-      grid-area: title-2;
+   
+    &__EnglishTitle{
+       //@include pc() {
+      grid-area: title2;
       font-size: .7rem;
+       //}
+       /*@include phone() {
+         grid-row: 2;
+         grid-column: 1;
+         font-size: 9px;
+       }*/
+      color: $font-color ;
+      //justify-self: start;
     }
-    @include phone() {
-      grid-row: 2;
-      grid-column: 1;
-      font-size: 9px;
-    }
-    color: $font-color ;
-    justify-self: start;
-  }
-
-  .headerSec__input{
-    @include pc() {
-      display: block;
+   
+    &__input {
+       //@include pc() {
+      //display: block;
       grid-area: search;
       width: 406px;
       height: 48px;
@@ -118,85 +111,84 @@ $phone-media: 480px;
       color: #f8f8f2;
       font-size: .4rem;
       outline: none;
-      justify-self: stretch;
-
-      &::placeholder{
+      //justify-self: end;
+   
+      &::placeholder {
         color: #f8f8f2;
         font-size: 21px;
         font-family: Arial, Regular;
       }
-
-      &+a{
-        justify-self: end;
-        align-self: flex-end;
-        text-align: right;
-        font-size: 1.3rem;
-        margin-right: 3.5rem;
-        margin-top: 1rem;
-      }
+       //}
+       /*@include phone() {
+         display: none;
+       }*/
     }
-    @include phone() {
-      display: none;
-    }
-  }
-
-  .user{
-    @include pc() {
-      display: block;
+   
+    &__user{
+       //@include pc() {
+      //display: block;
       font-size: 10px;
       color: $font-color ;
       grid-area: user;
+       //}
+       /*@include phone() {
+         display: none;
+         grid {
+           row: 1;
+           column: 3;
+         }*/
     }
-    @include phone() {
-      display: none;
-      grid {
-        row: 1;
-        column: 3;
-      }
-    }
-  }
-
-  .dropdown{
-    @include pc() {
+    .dropdown{
+        //@include pc() {
       grid-area: navbar;
       list-style-type: none;
       overflow: hidden;
       margin: 0;
       padding: 0;
+      color: #f8f8f2 ;
       background-color: rgba(0, 0, 0, 0);
+        //}
+        /*@include phone() {
+          display: none;
+        }*/
+      font-size: 24px;
+      
+      li{
+        float:right ;
+      }
     }
-    @include phone() {
-      display: none;
+    
+    &__navbar{
+      display: inline-block;
+      z-index: 3;
+
+      &:hover {
+        .header__btn{
+          border-bottom: 5px;
+          border-color: #00c3d0 ;
+        }
+      }
     }
-    font-size: 24px;
-  }
 
-  li a, .dropdown__btn {
-    width: 154px;
-    height: 43px;
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px 0 0;
-    text-decoration: none;
-    z-index: 2;
-  }
+    &__btn {
+      width: 154px;
+      height: 43px;
+      display: inline-block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px 0 0;
+      text-decoration: none;
+      z-index: 2;
 
-  li a:hover, .dropdown__navbar:hover .dropdown__btn{
-    border-bottom: 5px;
-    border-color: #00c3d0 ;
-  }
-
-  li{
-    float: right;
-  }
-
-  li.dropdown__navbar{
-    display: inline-block;
-  }
-
-  .dropdown__content{
-    @include pc() {
+      &:hover {
+        .dropdown__content {
+          display:block ;
+        }
+      }
+    }
+    
+    &__content{
+        //@include pc() {
       display: none;
       width: 1920px;
       height: 52px;
@@ -206,13 +198,12 @@ $phone-media: 480px;
       right: 0;
       box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
       z-index: 1;
-
+    
       a{
         color: white;
         padding: 9px 20px;
         text-decoration: none;
         display: inline;
-        float: right;
         text-align: center;
         font-family: Arial, Regular;
 
@@ -220,13 +211,10 @@ $phone-media: 480px;
           background: #008891 ;
         }
       }
-      @include phone() {
-        display: none;
-      }
+        //}
+          /*@include phone() {
+            display: none;
+          }*/
     }
-  }
-
-  .dropdown__navbar:hover .dropdown__content {
-    display: block;
   }
 }
