--- a/static/src/sass/home/index.scss
+++ b/static/src/sass/home/index.scss
@@ -1,8 +1,10 @@
-@import '../components/common/reset';
-@import '../components/common/header';
-@import '../components/common/footer';
+@import 'components/common/reset';
+@import 'components/common/header';
+@import 'components/common/footer';
 
 body {
-  @include header();
-  @include footer();
+  height: 100%;
+  background: red;
 }
+@include header();
+//@include footer();
