--- a/static/src/pug/components/common/header.pug
+++ b/static/src/pug/components/common/header.pug
@@ -1,54 +1,55 @@
 mixin header()
   header.header
-    img.header__img
+    img.header__img(src='http://via.placeholder.com/60x60')
     p.header__ChineseTitle
       a(href='/') 成功大學資訊工程學系暨研究所
     p.header__EnglishTitle
       a(href='/')  Department of Computer Science and Information Engineering
-    a.header__input
-    a.header__user(href='#')
+    img.header__country(src='http://via.placeholder.com/30x30')
+    img.header__input(src='http://via.placeholder.com/35x35')
+    img.header__user(src='http://via.placeholder.com/35x35')
 
-    button.header__btn
+    nav.header__btn
       ul.dropdown
         li.dropdown__navbar
-          a.dropdown__btn(href='/') 首頁
+          button.dropdown__btn 首頁
         li.dropdown__navbar
-          a.dropdown__btn(href='#') 關於本系
-            ul.dropdown__content
-              a(href='/about/intro') 系所介紹
-              a(href='/about/teachers') 師資陣容
-              a(href='/about/members') 系辦成員
-              a(href='/about/honor') 榮譽事蹟
-              a(href='/about/location') 聯絡我們
+          button.dropdown__btn 關於本系
+          ul.dropdown__content
+            a(href='/about/intro') 系所介紹
+            a(href='/about/teachers') 師資陣容
+            a(href='/about/members') 系辦成員
+            a(href='/about/honor') 榮譽事蹟
+            a(href='/about/location') 聯絡我們
         li.dropdown__navbar
-          a.dropdown__btn(href='#') 學術研究
-            ul.dropdown__content
-              a(href='/research/labs') 實驗室
-              a(href='/research/groups') 研究群
-              a(href='/research/publications') Publications
-              a(href='/research/awards') Awards
-              a(href='/research/conferences') 研討會
+          button.dropdown__btn 學術研究
+          ul.dropdown__content
+            a(href='/research/labs') 實驗室
+            a(href='/research/groups') 研究群
+            a(href='/research/publications') Publications
+            a(href='/research/awards') Awards
+            a(href='/research/conferences') 研討會
         li.dropdown__navbar
-          a.dropdown__btn(href='#') 學生事務
-            ul.dropdown__content
-              a(href='/research/labs') 實驗室
-              a(href='/research/groups') 研究群
-              a(href='/research/publications') Publications
-              a(href='/research/awards') Awards
-              a(href='/research/conferences') 研討會
+          button.dropdown__btn 學生事務
+          ul.dropdown__content
+            a(href='/research/labs') 實驗室
+            a(href='/research/groups') 研究群
+            a(href='/research/publications') Publications
+            a(href='/research/awards') Awards
+            a(href='/research/conferences') 研討會
         li.dropdown__navbar
-          a.dropdown__btn(href='#') 系所公告
-            ul.dropdown__content
-              a(href='/announcement/all') 全部公告
-              a(href='/announcement/administrator') 行政公告
-              a(href='/announcement/activity') 活動訊息
-              a(href='/announcement/speech') 演講公告
-              a(href='/announcement/recruitment') 企業徵才
+          button.dropdown__btn 系所公告
+          ul.dropdown__content
+            a(href='/announcement/all') 全部公告
+            a(href='/announcement/administrator') 行政公告
+            a(href='/announcement/activity') 活動訊息
+            a(href='/announcement/speech') 演講公告
+            a(href='/announcement/recruitment') 企業徵才
         li.dropdown__navbar
-          a.dropdown__btn(href='#') 資源連結
-            ul.dropdown__content
-              a(href='/resource/law') 法規彙編
-              a(href='/resource/rent') 線上租借
-              a(href='/resource/fix') 修繕登記
-              a(href='/resource/ieet') 工程認證
-              a(href='/resource/resources') 線上資源
+          button.dropdown__btn 資源連結
+          ul.dropdown__content
+            a(href='/resource/law') 法規彙編
+            a(href='/resource/rent') 線上租借
+            a(href='/resource/fix') 修繕登記
+            a(href='/resource/ieet') 工程認證
+            a(href='/resource/resources') 線上資源
