--- a/static/src/sass/components/common/_header.scss
+++ b/static/src/sass/components/common/_header.scss
@@ -2,15 +2,9 @@
 @include font__load--NotoSansTC();
 @include font__load--NotoSans();
 
-$header-pc-size: 960px;
-$header-phone-size: 480px;
+$header-pc-size: 480px;
 @mixin header-pc () {
   @media screen and ( min-width: $header-pc-size ) {
-    @content;
-  }
-}
-@mixin header-phone () {
-  @media screen and ( max-width: $header-phone-size ) {
     @content;
   }
 }
@@ -19,21 +13,18 @@ $header-phone-size: 480px;
     $font-color: rgba( 0, 0, 0, .87 );
     background-color: #ffffff;
     width: 100%;
-    height: 150px;
     position: relative;
-    
-    @include header-phone() {
-      height: 78px;
-      display: grid;
-      grid-template: {
-        rows: .5fr .5fr;
-        columns: .7fr .15fr .15fr;
-        areas:
-          'header__Chinesetitle header__search header__navbtn'
-          'header__languagetitle . .';
-      }
+    height: 78px;
+    display: grid;
+    grid-template: {
+      rows: .5fr .5fr;
+      columns: .7fr .15fr .15fr;
+      areas:
+        'header__title-chinese header__search header__navbar'
+        'header__title-language . .';
     }
     @include header-pc () {
+      height: 150px;
       display: grid;
       grid-template: {
         rows: .3fr .2fr .2fr ;
@@ -46,9 +37,7 @@ $header-phone-size: 480px;
     }
 
     &__logo {
-      @include header-phone() {
         display: none;
-      }
       @include header-pc() {
         display: grid;
         grid-area: header__logo;
@@ -63,52 +52,46 @@ $header-phone-size: 480px;
    
     &__title {
       color: $font-color ;
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      letter-spacing: normal;
       &--chinese{
-        @include header-phone() {
           padding-top: 20px;
-          grid-area: title1;
+          grid-area: header__title-chinese;
           font-size: 18px;
           font-family: Arial, Regular;
-        }
-        @include header-pc() {
-          @include font__family--NotoSansTC();
-          grid-area: header__title-chinese;
-          font-size: .75rem;
-          line-height: 1.33;
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          letter-spacing: normal;
-        }
+          @include header-pc() {
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            letter-spacing: normal;
+            @include font__family--NotoSansTC();
+            grid-area: header__title-chinese;
+            font-size: .75rem;
+            line-height: 1.33;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            letter-spacing: normal;
+          }
       }
     
       &--language{
-        @include header-phone() {
-          grid-area: header__languagetitle;
+          grid-area: header__title-language;
           font-size: .33rem;
           line-height: 1.5;
-        }
-        @include header-pc() {
-          @include font__family--NotoSans();
-          grid-area: header__title-language;
-          line-height: 1.5;
-          font-size: .5rem;
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          letter-spacing: normal;
-        }
+          @include header-pc() {
+            @include font__family--NotoSans();
+            grid-area: header__title-language;
+            line-height: 1.5;
+            font-size: .5rem;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            letter-spacing: normal;
+          }
       }
     }
 
     &__language{
-      @include header-phone() {
         display: none;
-      }
       @include header-pc() {
         display: grid;
         grid-area: header__language;
@@ -122,7 +105,6 @@ $header-phone-size: 480px;
     }
    
     &__search {
-      @include header-phone() {
         display: block;
         grid-area: header__search ;
         width: 21.21px;
@@ -131,23 +113,19 @@ $header-phone-size: 480px;
         position: relative;
         top:30px;
         background-color: #33325e ;
-      }
       @include header-pc() {
         display: grid;
         grid-area: header__search;
         margin-top: .5rem;
         margin-left: 1rem;
         border-radius: 50%;
-        background-color: #33325e ;
         width: 35px;
         height: 35px;
       }
     }
    
     &__login{
-      @include header-phone() {
         display: none;
-      }
       @include header-pc() {
         display: grid;
         grid-area: header__login;
@@ -161,23 +139,22 @@ $header-phone-size: 480px;
     }
 
     .header__navigation-bar.navogation-bar{
-      @include header-phone() {
-        display: grid;
-        grid-area: header__navbtn ;
-        width: 21.21px;
-        height: 20.01px;
-        border-radius: 50%;
-        background-color: #f8f8f2 ;
-        position: relative;
-        top:30px;
-        background-color: #33325e ;
-
-        &:focus {
-          .dropdown {
-            display: block ;
-          }
+      display: grid;
+      grid-area: header__navbar ;
+      width: 21.21px;
+      height: 20.01px;
+      border-radius: 50%;
+      background-color: #f8f8f2 ;
+      position: relative;
+      top:30px;
+      background-color: #33325e ;
+      &:active {
+        .navigation-bar__dropdown.dropdown {
+          display: block ;
         }
       }
+
+
       @include header-pc() {
         grid-area: header__navbar;
         width:100%;
@@ -188,53 +165,90 @@ $header-phone-size: 480px;
       }
     }
 
-    .navigation-bar__dropdown.dropdown{
-      @include header-phone() {
-        display: none ;
-        width: 100vw ;
-        height: 100vh ;
-        white-space: nowrap;
+    .navigation-bar__dropdown.dropdown {
+      display: none ;
+      width: 100vw ;
+      height: 100vh ;
+      white-space: nowrap;
+      position: relative;
+      left: -350px;
+      top: -50px;
+      font-size: 18px;
+      font-family: Arial, Regular ;
+      background-color: #33325e;
+
+      &:hover{
+        display: block;
+      }
+
+      &__close {
+        &:active{
+          .navigation-bar__dropdown.dropdown{
+            display: none;
+          }
+        }
+        width: 1.6%;;
+        height:45px;
+      }
+
+      &__search {
         position: absolute;
         right: 0;
-        top: 0;
-        font-size: 18px;
-        font-family: Arial, Regular ;
-        background-color: #33325e;
+        width:5.3%;
+        height:5.3%;
+      }
 
-        &__navbar{
-          opacity: 50%;
-          color: #f8f8f2 ;
-          padding-top: 30px;
-          z-index: 3;
-          text-align: center;
-        }
-
-        &__btn{
-          opacity: 50%;
-
-          &:focus {
-            .dropdown__content{
-              display: block;
-            }
-          }
-        }
-
-        &__list{
-          display: none;
-          z-index: 2;
-
-          a{
-            color: white;
-            text-decoration: none;
-            text-align: center;
-            font-family: Arial, Regula;
-          }
+      &__navbar {
+        width:80%;
+        height:50px;
+        line-height: 50px;
+        display: grid;
+        grid-template: {
+          columns: .3fr 1fr;
+          areas:
+            'dropdown__img dropdown__btn';
         }
       }
+
+      &__img{
+        grid-area:dropdown__img;
+        width:30px;
+        height: 30px;
+        position: relative;
+        left:120px;
+        top:10px;
+      }
+
+      &__btn{
+        grid-area: dropdown__btn;
+        color: #F8F8F2;
+        background-color: #33325e;
+        left: 160px;
+        padding-bottom: 5px;
+        padding-top: 5px;
+        &:active {
+          .navigation-bar__dropdown.dropdown__list{
+            display: block;
+          }
+          background-color: #333C4E;
+          opacity: 94%;
+        }
+      }
+
+      &__list{
+        display: none;
+        z-index: 2;
+        color: white;
+        text-decoration: none;
+        text-align: center;
+        font-family: Arial, Regula;
+      }
+
       @include header-pc() {
-        position: absolute;
+        position: fixed;
         width: 100%;
-        height: 100%;
+        left:44.375%;
+        top:50px;
         font-weight: bold;
         font-style: normal;
         font-stretch: normal;
@@ -250,7 +264,7 @@ $header-phone-size: 480px;
       
         &__navbar{
           display: inline-block;
-          height: 66.6667%;
+          height: 80px;
           width: 6.002%;
 
           &:hover {
@@ -290,10 +304,26 @@ $header-phone-size: 480px;
           white-space: nowrap;
           position: absolute;
           margin-left: -100%;
-          margin-top: 1.455%;
+          margin-top: 2%;
           box-shadow: 0 8px 8px 0 rgba(0,0,0,.2);
           z-index: 1;
           padding-top: 1%;
+        }
+
+        &__img{
+          display: none;
+        }
+
+        &__login{
+          display: none;
+        }
+
+        &__close{
+          display: none;
+        }
+
+        &__search{
+          display: none;
         }
 
         &__item{
