--- a/static/src/pug/components/common/header.pug
+++ b/static/src/pug/components/common/header.pug
@@ -9,57 +9,68 @@ mixin header()
     img.header__search( src='http://via.placeholder.com/500x500' )
     img.header__login( src='http://via.placeholder.com/500x500' )
 
-    nav.header__navigation-bar.navogation-bar( tabindex='0' )
-      ul.navigation-bar__dropdown.dropdown
-        img.navigation-bar__dropdown.dropdown__close( src='http://via.placeholder.com/500x500' )
-        img.navigation-bar__dropdown.dropdown__search( src='http://via.placeholder.com/500x500' )
-        li.navigation-bar__dropdown.dropdown__navbar
-          img.navigation-bar__dropdown.dropdown__img( src='http://via.placeholder.com/500x500' )
-          button.navigation-bar__dropdown.dropdown__btn 首頁
-        li.navigation-bar__dropdown.dropdown__navbar
-          img.navigation-bar__dropdown.dropdown__img( src='http://via.placeholder.com/500x500' )
-          button.navigation-bar__dropdown.dropdown__btn 關於本系
-          nav.navigation-bar__dropdown.dropdown__list
-            a.navigation-bar__dropdown.dropdown__item(href='/about/intro') 系所介紹
-            a.navigation-bar__dropdown.dropdown__item(href='/about/teachers') 師資陣容
-            a.navigation-bar__dropdown.dropdown__item(href='/about/members') 系辦成員
-            a.navigation-bar__dropdown.dropdown__item(href='/about/honor') 榮譽事蹟
-            a.navigation-bar__dropdown.dropdown__item(href='/about/location') 聯絡我們
-        li.navigation-bar__dropdown.dropdown__navbar
-          img.navigation-bar__dropdown.dropdown__img( src='http://via.placeholder.com/500x500' )
-          button.navigation-bar__dropdown.dropdown__btn 學術研究
-          nav.navigation-bar__dropdown.navigation-bar__dropdown.dropdown__list
-            a.navigation-bar__dropdown.dropdown__item(href='/research/labs') 實驗室
-            a.navigation-bar__dropdown.dropdown__item(href='/research/groups') 研究群
-            a.navigation-bar__dropdown.dropdown__item(href='/research/publications') Publications
-            a.navigation-bar__dropdown.dropdown__item(href='/research/awards') Awards
-            a.navigation-bar__dropdown.dropdown__item(href='/research/conferences') 研討會
-        li.navigation-bar__dropdown.dropdown__navbar
-          img.navigation-bar__dropdown.dropdown__img( src='http://via.placeholder.com/500x500' )
-          button.navigation-bar__dropdown.dropdown__btn 學生事務
-          nav.navigation-bar__dropdown.dropdown__list
-            a.navigation-bar__dropdown.dropdown__item(href='/research/labs') 實驗室
-            a.navigation-bar__dropdown.dropdown__item(href='/research/groups') 研究群
-            a.navigation-bar__dropdown.dropdown__item(href='/research/publications') Publications
-            a.navigation-bar__dropdown.dropdown__item(href='/research/awards') Awards
-            a.navigation-bar__dropdown.dropdown__item(href='/research/conferences') 研討會
-        li.navigation-bar__dropdown.dropdown__navbar
-          img.navigation-bar__dropdown.dropdown__img( src='http://via.placeholder.com/500x500' )
-          button.navigation-bar__dropdown.dropdown__btn 系所公告
-          nav.navigation-bar__dropdown.dropdown__list
-            a.navigation-bar__dropdown.dropdown__item(href='/announcement/all') 全部公告
-            a.navigation-bar__dropdown.dropdown__item(href='/announcement/administrator') 行政公告
-            a.navigation-bar__dropdown.dropdown__item(href='/announcement/activity') 活動訊息
-            a.navigation-bar__dropdown.dropdown__item(href='/announcement/speech') 演講公告
-            a.navigation-bar__dropdown.dropdown__item(href='/announcement/recruitment') 企業徵才
-        li.navigation-bar__dropdown.dropdown__navbar
-          img.navigation-bar__dropdown.dropdown__img( src='http://via.placeholder.com/500x500' )
-          button.navigation-bar__dropdown.dropdown__btn 資源連結
-          nav.navigation-bar__dropdown.dropdown__list
-            a.navigation-bar__dropdown.dropdown__item(href='/resource/law') 法規彙編
-            a.navigation-bar__dropdown.dropdown__item(href='/resource/rent') 線上租借
-            a.navigation-bar__dropdown.dropdown__item(href='/resource/fix') 修繕登記
-            a.navigation-bar__dropdown.dropdown__item(href='/resource/ieet') 工程認證
-            a.navigation-bar__dropdown.dropdown__item(href='/resource/resources') 線上資源
-        img.navigation-bar__dropdown.dropdown__img( src='http://via.placeholder.com/500x500' )
-        button.navigation-bar__dropdown.dropdown__login 登入
+    a.header__navbtn( href="#navbtn" )
+      img.header__navbtn-img( src='http://via.placeholder.com/500x500' )
+    nav#navbtn.header__navigation-bar
+      a.header__navigation-bar__close(href="#")
+      nav.header__navigation-bar__content
+        ul.navigation-bar__dropdown.dropdown
+          input.navigation-bar__dropdown.dropdown__search
+          li.navigation-bar__dropdown.dropdown__navbar
+            a.navigation-bar__dropdown.dropdown__btn-item 首頁
+          li.navigation-bar__dropdown.dropdown__navbar
+            input#about.navigation-bar__dropdown.dropdown__btn(type="checkbox")
+            label(for="about")
+              a.navigation-bar__dropdown.dropdown__btn-item 關於本系
+            nav.navigation-bar__dropdown.dropdown__list
+              a.navigation-bar__dropdown.dropdown__item(href='/about/intro') 系所介紹
+              a.navigation-bar__dropdown.dropdown__item(href='/about/teachers') 師資陣容
+              a.navigation-bar__dropdown.dropdown__item(href='/about/members') 系辦成員
+              a.navigation-bar__dropdown.dropdown__item(href='/about/honor') 榮譽事蹟
+              a.navigation-bar__dropdown.dropdown__item(href='/about/location') 聯絡我們
+          li.navigation-bar__dropdown.dropdown__navbar
+            input#research.navigation-bar__dropdown.dropdown__btn(type="checkbox")
+            label(for="research")
+              a.navigation-bar__dropdown.dropdown__btn-item 學術研究
+            nav.navigation-bar__dropdown.navigation-bar__dropdown.dropdown__list
+              a.navigation-bar__dropdown.dropdown__item(href='/research/labs') 實驗室
+              a.navigation-bar__dropdown.dropdown__item(href='/research/groups') 研究群
+              a.navigation-bar__dropdown.dropdown__item(href='/research/publications') Publications
+              a.navigation-bar__dropdown.dropdown__item(href='/research/awards') Awards
+              a.navigation-bar__dropdown.dropdown__item(href='/research/conferences') 研討會
+          li.navigation-bar__dropdown.dropdown__navbar
+            input#student.navigation-bar__dropdown.dropdown__btn(type="checkbox")
+            label(for="student")
+              a.navigation-bar__dropdown.dropdown__btn-item 學生事務
+            nav.navigation-bar__dropdown.dropdown__list
+              a.navigation-bar__dropdown.dropdown__item(href='/research/labs') 實驗室
+              a.navigation-bar__dropdown.dropdown__item(href='/research/groups') 研究群
+              a.navigation-bar__dropdown.dropdown__item(href='/research/publications') Publications
+              a.navigation-bar__dropdown.dropdown__item(href='/research/awards') Awards
+              a.navigation-bar__dropdown.dropdown__item(href='/research/conferences') 研討會
+          li.navigation-bar__dropdown.dropdown__navbar
+            input#announcement.navigation-bar__dropdown.dropdown__btn(type="checkbox")
+            label(for="announcement")
+              a.navigation-bar__dropdown.dropdown__btn-item 系所公告
+            nav.navigation-bar__dropdown.dropdown__list
+              a.navigation-bar__dropdown.dropdown__item(href='/announcement/all') 全部公告
+              a.navigation-bar__dropdown.dropdown__item(href='/announcement/administrator') 行政公告
+              a.navigation-bar__dropdown.dropdown__item(href='/announcement/activity') 活動訊息
+              a.navigation-bar__dropdown.dropdown__item(href='/announcement/speech') 演講公告
+              a.navigation-bar__dropdown.dropdown__item(href='/announcement/recruitment') 企業徵才
+          li.navigation-bar__dropdown.dropdown__navbar
+            input#resources.navigation-bar__dropdown.dropdown__btn(type="checkbox")
+            label(for="resources")
+              a.navigation-bar__dropdown.dropdown__btn-item 資源連結
+            nav.navigation-bar__dropdown.dropdown__list
+              a.navigation-bar__dropdown.dropdown__item(href='/resource/law') 法規彙編
+              a.navigation-bar__dropdown.dropdown__item(href='/resource/rent') 線上租借
+              a.navigation-bar__dropdown.dropdown__item(href='/resource/fix') 修繕登記
+              a.navigation-bar__dropdown.dropdown__item(href='/resource/ieet') 工程認證
+              a.navigation-bar__dropdown.dropdown__item(href='/resource/resources') 線上資源
+          li.navigation-bar__dropdown.dropdown__navbar
+            a.navigation-bar__dropdown.dropdown__btn-item 登入
+          li.navigation-bar__dropdown.dropdown__navbar
+            a.navigation-bar__dropdown.dropdown__btn-item 行事曆
+          li.navigation-bar__dropdown.dropdown__navbar
+            a.navigation-bar__dropdown.dropdown__btn-item 語言
