--- a/static/src/pug/components/common/header.pug
+++ b/static/src/pug/components/common/header.pug
@@ -69,8 +69,8 @@ mixin header()
               a.navigation-bar__dropdown.dropdown__item(href='/resource/ieet') 工程認證
               a.navigation-bar__dropdown.dropdown__item(href='/resource/resources') 線上資源
           li.navigation-bar__dropdown.dropdown__navbar
-            a.navigation-bar__dropdown.dropdown__btn-item 登入
+            a.navigation-bar__dropdown.dropdown__login 登入
           li.navigation-bar__dropdown.dropdown__navbar
-            a.navigation-bar__dropdown.dropdown__btn-item 行事曆
+            a.navigation-bar__dropdown.dropdown__calendar 行事曆
           li.navigation-bar__dropdown.dropdown__navbar
-            a.navigation-bar__dropdown.dropdown__btn-item 語言
+            a.navigation-bar__dropdown.dropdown__language 語言
