--- a/static/src/sass/components/common/_header.scss
+++ b/static/src/sass/components/common/_header.scss
@@ -252,7 +252,7 @@ $header-pc-size: 480px;
         left: 18px;
         top: 12px;
         font-size: .5rem;
-        border: 1px solid #ddd;
+        border: .2px solid #ddd;
         background-color: #1d2d56;
       }
 
@@ -286,8 +286,14 @@ $header-pc-size: 480px;
         display: inline-block;
         text-decoration: none;
         border: .5px solid #ddd;        
-        padding: 10px;
+        padding: 10px 10px 10px 26px;
         width: 100%;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: rgba(255, 255, 255, 0.5);
       }
 
       &__list{
@@ -305,21 +311,54 @@ $header-pc-size: 480px;
         margin-left: 150px;
         font-size: 16px;
         background: #1d2d56;
-        color: #eee;
         width: 100%;
         padding-left: 20px;
         line-height: 30px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: rgba(255, 255, 255, 0.5);
       }
 
+      &__login{
+        color: rgba(255, 255, 255, 0.5);
+        padding: 10px 10px 10px 26px;
+        display: inline-block;
+        text-decoration: none;
+        border: .5px solid #ddd;
+        width: 100%;
+      }
+
+      &__calendar{
+        color: rgba(255, 255, 255, 0.5);
+        padding: 10px 10px 10px 26px;
+        display: inline-block;
+        text-decoration: none;
+        border: .5px solid #ddd;
+        width: 100%;
+      }
+
+      &__language{
+        color: rgba(255, 255, 255, 0.5);
+        padding: 10px 10px 10px 26px;
+        display: inline-block;
+        text-decoration: none;
+        border: .5px solid #ddd;
+        width: 100%;
+      }
+
+
       @include header-pc() {
+        background-color:rgba(0,0,0,0);
         position: fixed;
         width: 100%;
         left:44.375%;
-        top:50px;
         font-weight: bold;
         font-style: normal;
         font-stretch: normal;
-        margin-top:  1rem;;
+        margin-top:  1rem;
         letter-spacing: normal;
         color: #adacad;
         font-size: .5rem;
@@ -341,7 +380,7 @@ $header-pc-size: 480px;
           }
         }
 
-        &__btn {
+        &__btn-item {
           @include font__family--NotoSansTC();
           width: 100%;
           height:54%;
@@ -356,6 +395,29 @@ $header-pc-size: 480px;
           display: inline-block;
           color: #adacad;
           background-color: #ffffff ;
+          border: 0;
+
+          &:hover {
+            background-color:rgba(196, 196, 196, .3);
+          }
+        }
+
+        &__btn{
+          @include font__family--NotoSansTC();
+          width: 100%;
+          height:54%;
+          font-weight: bold;
+          font-style: normal;
+          font-stretch: normal;
+          line-height: 1.5;
+          letter-spacing: normal;
+          font-size: .5rem;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          color: #adacad;
+          background-color: #ffffff ;
+          border: 0;
 
           &:hover {
             background-color:rgba(196, 196, 196, .3);
@@ -364,17 +426,26 @@ $header-pc-size: 480px;
         
         &__list{
           display: none;
+          max-height: 200px;
           list-style-type:none;
-          width: 200%;
+          width: 3000%;
           height: 81px;
-          background-color: #33325e;
+          background: #1d2d56;
           white-space: nowrap;
           position: absolute;
-          margin-left: -100%;
+          margin-left: -1500%;
           margin-top: 2%;
           box-shadow: 0 8px 8px 0 rgba(0,0,0,.2);
           z-index: 1;
           padding-top: 1%;
+        }
+
+        &__calendar{
+          display: none;
+        }
+
+        &__language{
+          display: none;
         }
 
         &__img{
@@ -396,9 +467,12 @@ $header-pc-size: 480px;
         &__item{
           @include font__family--NotoSansTC();
           display: inline-block;
-          width: 4%;
-          height: 80%;
-          padding-top: .5%;
+          width: 115px;
+          height: 54px;
+          padding: 13px;
+          margin-left: 0;
+          background: #1d2d56;
+          margin-top: 13px;
           font-weight: bold;
           font-style: normal;
           font-stretch: normal;
