--- a/static/src/pug/components/common/header.pug
+++ b/static/src/pug/components/common/header.pug
@@ -69,8 +69,11 @@ mixin header()
               a.navigation-bar__dropdown.dropdown__item(href='/resource/ieet') 工程認證
               a.navigation-bar__dropdown.dropdown__item(href='/resource/resources') 線上資源
           li.navigation-bar__dropdown.dropdown__navbar
+            img.navigation-bar__dropdown.dropdown__img( src='http://via.placeholder.com/500x500' )
             a.navigation-bar__dropdown.dropdown__login 登入
           li.navigation-bar__dropdown.dropdown__navbar
+            img.navigation-bar__dropdown.dropdown__img( src='http://via.placeholder.com/500x500' )
             a.navigation-bar__dropdown.dropdown__calendar 行事曆
           li.navigation-bar__dropdown.dropdown__navbar
+            img.navigation-bar__dropdown.dropdown__img( src='http://via.placeholder.com/500x500' )
             a.navigation-bar__dropdown.dropdown__language 語言
